[package]
name = "sensitive_trait"
description = "A marker trait for sensitive information."
version = "0.1.2"
edition = "2021"
license = "ISC"
authors = ["WhyNotDogie"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
